--- a/activity1.html
+++ b/activity1.html
@@ -98,7 +98,7 @@
         <tr>
           <td><input type="radio">Visa</td>
           <td>Expiry Date:</td>
-          <td><input type="month" maxlength="5"></td>
+          <td><input type="date" maxlength="5"></td>
         </tr>
 
         <tr>
